# Master-Thesis-Few-Shot-CoT-Prompting-LLM

./: .env  .env.template  CoT_Aqua.ipynb  CoT_Arithmetic.ipynb  CoT_StrategyQA.ipynb  Evaluation.rtf  Experiments.ipynb  Experiments.rtf  Models.rtf  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: CoT_StrategyQA-checkpoint.ipynb
auto-cot-main/: Experiments_B.ipynb  run_demo.py  try_cot.ipynb
estimate_costs/: gsm8k_cot_lendata_1319.txt  gsm8k_standard_lendata_1319.txt  strategyqa_cot_lendata_2290.txt  strategyqa_standard_lendata_2290.txt
references/: Reference.docx
results/Zero_Shot_CoT/: gsm8k.jsonl  strategyqa.jsonl
src/: Datasets_Size.ipynb  Untitled.ipynb  active_aqua_paper  active_gsm8k_paper  app.py  app2.py  constant_variables.py  constant_vars.py  data_labeling.py  embeddings  estimate_costs.py  estimate_costs_inference.py  experiment_llm.py  extract_final_answer.py  falcon_7b_instruct.py  generate_demo_active.py  generate_demo_active_given_uncertainty.py  generate_demo_auto.py  generate_demo_auto_active_cot_kmeans.py  generate_demo_auto_active_cot_kmeans_effective.py  generate_demo_auto_active_cot_kmeans_plusplus.py  generate_demo_auto_active_cot_kmeans_plusplus_new.py  generate_demo_auto_active_cot_kmeans_plusplus_retrieval.py  generate_demo_auto_active_cot_kmeans_plusplus_updated.py  generate_demo_auto_active_cot_kmeans_updated.py  generate_demo_auto_cot_combination.py  generate_demo_auto_cot_kmeans_plusplus.py  generate_demo_auto_given_cluster.py  generate_demo_diverse_active_cot_kmeans.py  generate_demo_diverse_active_cot_kmeans_plusplus.py  generate_demo_diverse_given_cluster.py  generate_demo_given_uncertainty.py  generate_demo_random.py  generate_demo_run_inference_auto_active_cot_kmeans_plusplus_retrieval.py  generate_demo_run_inference_diverse_active_cot_kmeans_plusplus_retrieval.py  generate_demo_run_inference_retrieval.py  generate_embeddings.py  generate_fewshot_demonstrations.py  generate_subset_from_original_data.py  generate_uncertainty.py  (+41 more)
src/prompts/: strategyqa_prompt_cot.txt  strategyqa_prompt_cot_new.txt
src/prompts_active/: math_word_problems
src/special_case_prompts_aqua/: aqua_demos_case_brackets
src/uncertainty_scores/: Active_aqua_numtrials_5_sortby_disagreement.txt  Active_gsm8k_numtrials_5_sortby_disagreement.txt  AutoActiveKMeansPlusPlus_gsm8k_numtrials_5_sortby_disagreement.txt  AutoActiveKMeansPlusPlus_gsm8k_numtrials_5_sortby_entropy.txt  AutoActiveKMeans_gsm8k_model_tiiuae_falcon-7b-instruct_numtrials_5_nrclusters_4_sortby_entropy  AutoActiveKMeans_gsm8k_numtrials_5_nrclusters_3_sortby_entropy  AutoActiveKMeans_gsm8k_numtrials_5_nrclusters_4_sortby_entropy  method_AutoActiveKMeans_dataset_gsm8k_model_gpt-3-5-turbo_method_few_shot_cot_numtrails_4_sortby_entropy_temperature_0-7_maxralen_None_seed_42_nrdemos_3_datasetsizelimit_10  method_active_dataset_gsm8k_model_gpt-3.5-turbo_numtrials_5_sortby_entropy.txt  method_active_gsm8k_model_gpt-3-5-turbo_method_few_shot_cot_numtrails_4_sortby_entropy_temperature_0-7_seed_42_nrdemos_3_datasetsizelimit_2.txt  (+2 more)
src/utils/: embedding_generation.py  estimate_costs.py  filter_simple_examples.py  (+7 more)
(+9344 files in other folders)
