[tool.poetry]
name = "chain-of-thought-retrieval-augmented-llm"
version = "0.1.0"
description = "Chain of Thought Prompting and Retrieval Augmented LLMs"
authors = ["Lorenc Zhuka <lorenc.zhuka@merckgroup.com>"]
readme = "README.md"
packages = [{include = "chain_of_thought_retrieval_augmented_llm"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.0.300"
fire = "0.5.0"
paper-qa = "1.6.0"
wikipedia = "^1.4.0"
requests = "2.30.0"
openai = "0.27.2"
streamlit = "^1.23.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
transformers = "^4.30.2"
huggingface-hub = "^0.15.1"
python-dotenv = "^1.0.0"
accelerate = "^0.22.0"
einops = "^0.6.1"
seaborn = "^0.12.2"
bitsandbytes = "^0.41.1"
torch = "2.0.1"
nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cuda-runtime-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cudnn-cu11 = { version = "8.5.0.96", platform = 'linux' }
nvidia-cufft-cu11 = { version = "10.9.0.58", platform = 'linux' }
nvidia-curand-cu11 = { version = "10.2.10.91", platform = 'linux' }
nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }
triton = { version = "2.0.0", platform = 'linux' }
vllm = "^0.1.7"
ray = "^2.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
